syntax = "proto3";

package controller.storage.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "controller/storage/iam/store/v1/timestamp.proto";
import "controller/storage/iam/store/v1/scope.proto";

message User {
  // public_id is used to access the User via an API
  // @inject_tag: gorm:"primary_key"
  string public_id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // name is the optional friendly name used to
  // access the User via an API
  // @inject_tag: `gorm:"default:null"`
  string name = 4;

  // description of the user
  // @inject_tag: `gorm:"default:null"`
  string description = 5;

  // scope id for the user
  // @inject_tag: `gorm:"default:null"`
  string scope_id = 6;

  // disabled is by default false and allows a User to be marked disabled.
  bool disabled = 7;
}